# oriented-particles

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindEigen.cmake
docker/: Dockerfile
resources/: T7.vtk
src/: CMakeLists.txt
src/Bodies/: ALAreaConstraint.cxx  ALAreaConstraint.h  ALConstraint.cxx  ALConstraint.h  ALVolConstraint.cxx  ALVolConstraint.h  Body.h  BrownianBody.cxx  BrownianBody.h  CMakeLists.txt  Morse2D.cxx  Morse2D.h  OPSBody.cxx  OPSBody.h  OPSBodyCutOff.cxx  OPSBodyCutOff.h  OPSMesh.cxx  OPSMesh.h  OPSModel.cxx  OPSModel.h  PeriodicPlateBody.cxx  PeriodicPlateBody.h  Pressure.cxx  Pressure.h  ViscosityBody.cxx  ViscosityBody.h  VolumeConstraint.cxx  VolumeConstraint.h
src/Constraints/: AugmentedLagrangian.cxx  AugmentedLagrangian.h  CMakeLists.txt  Constraint.h
src/Drivers/: Asphericity.cxx  BrownDynCutOff.cxx  BrownDynDriver.cxx  BrownDynOPS.cxx  BrownDynOPS2.cxx  BrownDynOPS3.cxx  BrownDynOPSArea.cxx  BrownDynOPSConstraints.cxx  BrownDynOPSVol.cxx  CMakeLists.txt  Crumple.cxx  CrumpleOrMelt.cxx  DualMesh.cxx  FreeDiffusion.cxx  FullOutputOPS.cxx  HeatOPSModel.cxx  Inertia.cxx  PeriodicPlateMelting.cxx  PlateMelting.cxx  PrintDOF.cxx  SHTools_Wrapper.f95  Test.cxx  TestOPSConsistency.cxx
src/Gui/: CMakeLists.txt  LiveSimulation.cxx  LiveSimulation.h  LiveSimulationWindow.cxx  LiveSimulationWindow.h  LiveSimulationWindow.ui  RoughnessGUI.ui  RoughnessWidget.cxx  RoughnessWidget.h  RunLiveSimulation.cxx  RunRoughnessGUI.cxx
src/Helpers/: CMakeLists.txt  Delaunay3DSurf.cxx  HelperFunctions.h  InterpolationFromData.cxx  Kabsch.cxx  ReadInputFile.cxx  SimulationState.cxx  StereoGraphicProjection.cxx
src/Model/: CMakeLists.txt  Model.cxx  Model.h  OPSModel.cxx  OPSModel.h
src/PostProcess/: CMakeLists.txt  CalculateVolume.cxx  PlotRow.cxx  PostProcess.cxx  SHTools.h  SHTools_Wrapper.f95
src/Solvers/: CMakeLists.txt  LBFGS.h  LBFGSBWrapper.cxx  LBFGSBWrapper.h
src/Solvers/lbfgsb/: CMakeLists.txt  lbfgsb-routines.f
